--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.4.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.1",
