--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/build-angular": "^15.2.8",
     "@angular/cli": "^15.2.8",
     "@angular/compiler-cli": "^15.2.9",
+    "@babel/traverse": "^7.23.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
