--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,8 @@ testem.log
 .DS_Store
 Thumbs.db
 
-# Environments
+# Environments - dev
 src/environments/environment.ts
+/src/environments/environment.ts
+/environments/environment.ts
+environments/environment.ts
