--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@angular/forms": "^15.2.9",
     "@angular/google-maps": "^15.2.9",
     "@angular/material": "^15.2.9",
+    "@angular/material-moment-adapter": "^15.2.9",
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "moment": "^2.29.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -33,6 +36,7 @@
     "@angular/cli": "^15.2.8",
     "@angular/compiler-cli": "^15.2.9",
     "@babel/traverse": "^7.23.2",
+    "@types/google.maps": "^3.54.10",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
