--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ src/environments/environment.ts
 /src/environments/environment.ts
 /environments/environment.ts
 environments/environment.ts
+/environments
+src/environments/
+
